2013-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_filemanager.php: Fixed file manager
	in metaconsole for bug #2361 and more little aesthetic fixes

2013-07-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.js: removed some changes.
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.dinamic.php,
	operation/agentes/networkmap.php: first version of dinamic view
	for networkmap. It needs implement tooltip and of course fix
	the new bugs.

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_template.php: Fix alert
	template hint javascript problem for bug #2357

	* godmode/massive/massive_edit_modules.php: Change 
	help tip to clarify user experience

2013-07-25 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* include/functions.php: Modified function get_user_language
	. if it's called from metaconsole then user lang can be
	updated (support for external hashed call to Pandora).
	
2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php: Move policy constants from
	functions_policy to constants file

	* godmode/massive/massive_edit_modules.php: Change the 
	values of link/unlink in massive modules to pending to 
	link/unlink. Its the correct way of do it

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_operations.php
	godmode/massive/massive_edit_modules.php: Added category
	and link/unkink module from policy in massive modules edition
	for bug #2341 and feature request #293

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/manage_recontask_form.php: Added a help tip for parent
	  recursion.

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Sort the tags by name for
	bug #2355

2013-07-24  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed a translation that
	  broke the javascript.
