@@ -1,5 +1,10 @@
 2013-07-26  Sergio Martin <sergio.martin@artica.es>
 
+	* godmode/reporting/reporting_builder.php: Fix errors
+	on reports edition
+
+2013-07-26  Sergio Martin <sergio.martin@artica.es>
+
 	* include/functions_filemanager.php: Fixed file manager
 	in metaconsole for bug #2361 and more little aesthetic fixes
 
